# sovereign-monorepo

./: AGI_GAP_ANALYSIS.md  AUTHORITY_CLASSIFICATION.md  CORE_BOUNDARY.md  LICENSE  MISUSE_SIGNALS.md  README.md  SEASON_2_CLOSE_OUT.md  SEASON_2_SITREP.md  SEASON_3_KICKOFF.md  TOOL_READINESS_REPORT.md
agents/gesture-protocol/: CODE_REVIEW_REPORT.md  README.md  gesture_protocol.yaml  ironcore_kernel.py  manus_bridge.py  manus_bridge.service
agents/sovereign-agent/: README.md  main.py
apps/blade2ai/: README.md  launch_loops.ps1  truth_engine_enhanced.py
apps/elite/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
apps/elite/agents/: model_mesh_router.py  verified-agent-elite.ts
apps/elite/config/: sanctuary_config.yaml  swarm_config.json
apps/elite/core/: daemon.py  models.py
apps/elite/docs/: ARCHITECTURE.md  BUG_FIXES.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  NEXT_STEPS_GUIDE.md  PDCA_CYCLES_2_5_REPORT.md  PDCA_CYCLE_1_ASSESSMENT.md  SAFETY_PROTOCOL.md
apps/elite/runtime/: state.json
apps/elite/scripts/: github_push.sh  push_system.py
apps/elite/scripts/discovery/: discovery_elite.ps1  parse_gmail_export.py
apps/elite/tools/: __init__.py  flight_control_daemon.py  self_heal_monitor.py
apps/elite/tools/restore/: create_restore_point.py  restore_allowlist.txt  restore_from_point.py
apps/elite/tools/safety/: safety_guardrail_check.py  verify_restore_point.py  verify_snapshot_safety.py
apps/elite/tools/snapshot/: create_evidence_snapshot.py
apps/elite/tools/takedown/: mirror_takedown.py
apps/elite/ui/: Fortress-Elite-Cockpit.html
apps/web-stack/: README.md
docs/protocol/: README.md
docs/season2/: 25_DAY_SPRINT_PLAN.md  90_DAY_STRATEGIC_PLAN.md  AI_ASSISTED_OPERATIONS_FRAMEWORK.md  GOVERNANCE_ASSESSMENT_TOOL_SPEC.md  GRANT_ACQUISITION_STRATEGY.md  PRODUCT_SPEC_ASSESSMENT_TOOL.md  SEASON2_CLOSEOUT_SEAL.md  SEASON2_PLAN.md  STANDALONE_PRODUCT_PRINCIPLES.md  TEAM_DISTRIBUTION_PACK.md  (+1 more)
(+164 files in other folders)
